# Arterm

./: .gitignore  AGENTS.md  ARTERM.md  ARTEX.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  vite.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  signpath-test.yml
docs/: EXTENSIONS.md  LANG_TOOLING_ROADMAP.md  arterm-cli-integration.md
electron/: main.cjs  preload.cjs  updater.cjs
examples/registry/: index.json
marketplace/: .env.example  Cargo.toml  README.md
marketplace/migrations/: 0001_init.sql
marketplace/src/: auth.rs  error.rs  main.rs  models.rs  routes.rs
patches/: @replit__codemirror-minimap@0.5.2.patch
public/: theme-init.js
scripts/: bridge-flood.mjs  bridge-smoke.mjs  linux-checksums.mjs  package-linux.sh
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  lib.rs  main.rs
src-tauri/tests/: fs_search.rs  git_operations.rs  shell_background.rs
src/app/: App.tsx
src/components/: WindowControls.tsx
src/lib/: fonts.ts  launchDir.ts  platform.ts
src/platform/: app.ts  autostart.ts  core.ts  event.ts  notification.ts  opener.ts  os.ts  path.ts  process.ts  store.ts  updater.ts  webview.ts  webviewWindow.ts  window.ts
src/styles/: fonts.css  (+1 more)
(+297 files in other folders)
